fix(food): filtrage et classement USDA par correspondance préfixe sur le nom